# aithru-agent

./: .gitignore  .npmrc  AGENTS.md  README.md  aithru-platform-app.yml  aithru.mock.yml  frontend-prototype-design.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  tsconfig.typecheck.json
backend/: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json  vitest.config.ts
backend/apps/api/: package.json
backend/examples/: approval_demo.ts  controlled_web_research_agent.py  deep_research_agent.py  file_report_agent.py  file_report_agent.ts
backend/scripts/: check-no-python.mjs
backend/src/aithru_agent/: secrets.py  settings.py
backend/src/api/: approvals.ts  health.ts  runs.ts  threads.ts
backend/src/application/: index.ts  runtime.ts
backend/src/capabilities/: audit.ts  policy.ts  production-router.ts
backend/src/cli/: server.ts
backend/src/core/: errors.ts  harness.ts  index.ts  model-turn.ts  run-loop.ts
backend/src/memory/: index.ts  provider.ts
backend/src/model/: index.ts  types.ts
backend/src/persistence/: protocols.ts  sqlite-store.ts  store.ts
backend/src/skills/: index.ts  loader.ts  registry.ts
backend/src/snapshots/: index.ts  snapshot.ts  summary.ts  tree.ts
backend/src/stream/: index.ts  sse.ts  writer.ts
backend/src/subagent/: index.ts  runner.ts
backend/src/trace/: index.ts
backend/src/worker/: external-run.ts  index.ts  recovery.ts  runner.ts
backend/tests/: conftest.py  test_smoke.py
backend/tests/agent/: test_aithru_toolset.py  test_boundary_capability.py  test_runtime_capability_assembly.py  test_runtime_tool_aliases.py  test_skill_capability.py  test_skill_package_capability.py  (+2 more)
docs/: ARCHITECTURE.md  (+9 more)
(+639 files in other folders)
