[project]
name = "aithru-agent-backend"
version = "0.1.0"
description = "Python backend for the Aithru Agent harness."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
  { name = "Aithru" }
]
dependencies = [
  "cryptography>=49.0.0",
  "fastapi>=0.116.0",
  "httpx>=0.28.0",
  "jsonschema>=4.26.0",
  "mem0ai>=2.0.0,<3.0.0",
  "pydantic>=2.11.0",
  "pydantic-ai>=0.8.0",
  "pydantic-ai-harness>=0.3.0",
  "uvicorn>=0.35.0",
]

[project.scripts]
aithru-agent-worker = "aithru_agent.worker.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.4.0",
  "pytest-asyncio>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aithru_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
